k8s/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: k8smatters.info
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: django-service
                port: 
                  number: 8000
          - path: /static/rest_framework/
            pathType: Prefix
            backend:
              service:
                name: django-service
                port: 
                  number: 8000
          - path: /assets/
            pathType: Prefix
            backend:
              service:
                name: react-service
                port: 
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-service
                port: 
                  number: 3000
